[metadata]
name = my_package
author = Josiah Carberry
author_email = josiah_carberry@brown.edu
description = My package description
keywords = one, two
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
# install_requires =
#     Jinja2 ~= 2.7.2
#     Django >= 1.6.1
#     python-etcd <=0.4.5
#     # comment in offset >0
#     Django-Select2 >6.0.1  # this version installs with lowercase so it catches a previous bug in pip_resolve.py
#     irc <16.2  # this has a cyclic dependecy (interanl jaraco.text <==> jaraco.collections)
#     testtools ===2.3.0  # this has a cycle (fixtures ==> testtols)
#     requests!=2.3.0
# # comment in offset 0
#     tensorflow== 2.17.0
include_package_data = True
